add amqp service and amqp email-service

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -111,6 +111,11 @@ hook {
   }
 }
 
+amqp {
+  uri = "amqp://guest:guest@127.0.0.1:5672"
+  uri = ${?AMQP_URI}
+}
+
 op-rabbit {
   topic-exchange-name = "amq.topic"
   topic-exchange-name = ${?RABBITMQ_TOPIC_EXCHANGE}
