--- a/src/main/resources/runtime.conf
+++ b/src/main/resources/runtime.conf
@@ -47,8 +47,9 @@ userpass {
   }
 
   email {
-    // http, rabbitmq
+    // http, rabbitmq, amqp
     type = "http"
+    type = ${?EMAIL_SERVICE_TYPE}
 
     http {
       serviceUrl = "http://localhost:9010"
@@ -61,6 +62,15 @@ userpass {
 
     rabbit-mq {
       queue = "tutelar_email"
+    }
+
+    amqp {
+      routing-key = "tutelar_email"
+      routing-key = ${?EMAIL_SERVICE_AMQP_ROUTING_KEY}
+      exchange = "amq.topic"
+      exchange = ${?EMAIL_SERVICE_AMQP_EXCHANGE}
+      buffer-size = 100
+      buffer-size = ${?EMAIL_SERVICE_AMQP_BUFFER_SIZE}
     }
   }
 }
