--- a/src/test/resources/runtime.conf
+++ b/src/test/resources/runtime.conf
@@ -44,5 +44,10 @@ userpass {
     rabbit-mq {
       queue = "QUEUE"
     }
+    amqp {
+      routing-key = "RK"
+      exchange = "EX"
+      buffer-size = 777
+    }
   }
 }
