--- a/src/main/resources/runtime.conf
+++ b/src/main/resources/runtime.conf
@@ -47,7 +47,7 @@ userpass {
   }
 
   email {
-    // http, rabbitmq, amqp
+    // http, amqp
     type = "http"
     type = ${?EMAIL_SERVICE_TYPE}
 
@@ -58,10 +58,6 @@ userpass {
       serviceUsername = ${?EMAIL_SERVICE_USERNAME}
       servicePassword = "super_secret_123"
       servicePassword = ${?EMAIL_SERVICE_PASSWORD}
-    }
-
-    rabbit-mq {
-      queue = "tutelar_email"
     }
 
     amqp {
