improve secrets config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -25,6 +25,7 @@ database {
   mongo {
     uri = "mongodb://localhost/tutelar"
     uri = ${?DB_URI}
+    uriFile = ${?DB_URI_FILE}
     collection = "users"
     collection = ${?DB_COLLECTION}
   }
@@ -40,10 +41,13 @@ jwt {
     algorithm = ${?SHORT_JWT_ALGORITHM}
     secret = "secret"
     secret = ${?SHORT_JWT_SECRET}
+    secretFile = ${?SHORT_JWT_SECRET_FILE}
     privateKey = ""
     privateKey = ${?SHORT_JWT_PRIVATE_KEY}
+    privateKeyFile = ${?SHORT_JWT_PRIVATE_KEY_FILE}
     publicKey = ""
     publicKey = ${?SHORT_JWT_PUBLIC_KEY}
+    publicKeyFile = ${?SHORT_JWT_PUBLIC_KEY_FILE}
   }
   longTerm {
     expirationTime = "1d"
@@ -54,10 +58,13 @@ jwt {
     algorithm = ${?LONG_JWT_ALGORITHM}
     secret = "secret_long"
     secret = ${?LONG_JWT_SECRET}
+    secretFile = ${?LONG_JWT_SECRET_FILE}
     privateKey = ""
     privateKey = ${?LONG_JWT_PRIVATE_KEY}
+    privateKeyFile = ${?LONG_JWT_PRIVATE_KEY_FILE}
     publicKey = ""
     publicKey = ${?LONG_JWT_PUBLIC_KEY}
+    publicKeyFile = ${?LONG_JWT_PUBLIC_KEY_FILE}
   }
   emailProvider {
     expirationTime = "30m"
@@ -68,10 +75,13 @@ jwt {
     algorithm = ${?EMAIL_JWT_ALGORITHM}
     secret = "secret_email"
     secret = ${?EMAIL_JWT_SECRET}
+    secretFile = ${?EMAIL_JWT_SECRET_FILE}
     privateKey = ""
     privateKey = ${?EMAIL_JWT_PRIVATE_KEY}
+    privateKeyFile = ${?EMAIL_JWT_PRIVATE_KEY_FILE}
     publicKey = ""
     publicKey = ${?EMAIL_JWT_PUBLIC_KEY}
+    publicKeyFile = ${?EMAIL_JWT_PUBLIC_KEY_FILE}
   }
   totpProvider {
     expirationTime = "10m"
@@ -82,10 +92,13 @@ jwt {
     algorithm = ${?TOTP_JWT_ALGORITHM}
     secret = "secret_email"
     secret = ${?TOTP_JWT_SECRET}
+    secretFile = ${?TOTP_JWT_SECRET_FILE}
     privateKey = ""
     privateKey = ${?TOTP_JWT_PRIVATE_KEY}
+    privateKeyFile = ${?TOTP_JWT_PRIVATE_KEY_FILE}
     publicKey = ""
     publicKey = ${?TOTP_JWT_PUBLIC_KEY}
+    publicKeyFile = ${?TOTP_JWT_PUBLIC_KEY_FILE}
   }
 }
 
@@ -108,12 +121,14 @@ hook {
     username = ${?HOOK_BASIC_USERNAME}
     password = ""
     password = ${?HOOK_BASIC_PASSWORD}
+    passwordFile = ${?HOOK_BASIC_PASSWORD_FILE}
   }
 }
 
 amqp {
   uri = "amqp://guest:guest@127.0.0.1:5672"
   uri = ${?AMQP_URI}
+  uriFile = ${?AMQP_URI_FILE}
 }
 
 tracer {
