--- a/src/main/resources/runtime.conf
+++ b/src/main/resources/runtime.conf
@@ -5,18 +5,21 @@ oauth2 {
   facebook {
     clientId = ${?FACEBOOK_CLIENT_ID}
     clientSecret = ${?FACEBOOK_CLIENT_SECRET}
+    clientSecretFile = ${?FACEBOOK_CLIENT_SECRET_FILE}
     scopes = "public_profile"
   }
 
   github {
     clientId = ${?GITHUB_CLIENT_ID}
     clientSecret = ${?GITHUB_CLIENT_SECRET}
+    clientSecretFile = ${?GITHUB_CLIENT_SECRET_FILE}
     scopes = "read:user,gist"
   }
 
   google {
     clientId = ${?GOOGLE_CLIENT_ID}
     clientSecret = ${?GOOGLE_CLIENT_SECRET}
+    clientSecretFile = ${?GOOGLE_CLIENT_SECRET_FILE}
     scopes = "openid,email,profile"
   }
 
@@ -29,6 +32,7 @@ ldap {
   readonlyUserWithNamespace = ${?LDAP_READONLY_USER_WITH_NAMESPACE}
   readonlyUserPassword = "readonly"
   readonlyUserPassword = ${?LDAP_READONLY_USER_PASSWORD}
+  readonlyUserPasswordFile = ${?LDAP_READONLY_USER_PASSWORD_FILE}
   userSearchBaseDomain = "ou=users,dc=wanari,dc=com"
   userSearchBaseDomain = ${?LDAP_USER_SEARCH_BASE_DOMAIN}
   userSearchAttribute = "cn"
@@ -58,6 +62,7 @@ userpass {
       serviceUsername = ${?EMAIL_SERVICE_USERNAME}
       servicePassword = "super_secret_123"
       servicePassword = ${?EMAIL_SERVICE_PASSWORD}
+      servicePasswordFile = ${?EMAIL_SERVICE_PASSWORD_FILE}
     }
 
     amqp {
