add callback config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -104,7 +104,9 @@ jwt {
 
 callback {
   success = "https://lvh.me:9443/index.html?token=<<TOKEN>>&refresh_token=<<REFRESH_TOKEN>>"
+  success = ${?CALLBACK_SUCCESS}
   failure = "https://lvh.me:9443/index.html?error=<<ERROR>>"
+  failure = ${?CALLBACK_FAILURE}
 }
 
 hook {
