--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -44,3 +44,54 @@ hook {
 tracer {
   client = "off"
 }
+
+oauth2 {
+  rootUrl = "https://lvh.me:9443"
+
+  github {
+    clientId = "clientId"
+    clientSecret = "clientSecret"
+    scopes = "read:user"
+  }
+
+  google {
+    clientId = "clientId"
+    clientSecret = "clientSecret"
+    scopes = "openid,email,profile"
+  }
+
+  facebook {
+    clientId = "clientId"
+    clientSecret = "clientSecret"
+    scopes = "public_profile"
+  }
+}
+
+ldap {
+  url = "ldap://1.2.3.4:389"
+  readonlyUserWithNamespace = "cn=readonly,dc=example,dc=com"
+  readonlyUserPassword = "readonlypw"
+  userSearchBaseDomain = "ou=peaple,dc=example,dc=com"
+  userSearchAttribute = "cn"
+  userSearchReturnAttributes = "cn,sn,email"
+  userSearchReturnArrayAttributes = "memberof"
+}
+
+userpass {
+  passwordDifficulty {
+    pattern = "PATTERN"
+  }
+  email {
+    type = "TYPE"
+    http {
+      serviceUrl = "URL"
+      serviceUsername = "USERNAME"
+      servicePassword = "SECRET"
+    }
+    amqp {
+      routing-key = "RK"
+      exchange = "EX"
+      buffer-size = 777
+    }
+  }
+}
