improve travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
 sudo: required
-language: scala
-
-scala:
-  - 2.13.0
 
 services:
   - docker
 
 script:
-  - docker-compose -f docker-compose.dev.yml -p tutelar up -d
-  - sbt clean compile test it:test
+  - docker-compose -f docker-compose.travis.yml up -d
+  - docker-compose -f docker-compose.travis.yml exec tutelar sbt -mem 2048 clean compile test it:test
