--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
 
 script:
   - docker-compose -f docker-compose.travis.yml up -d
-  - docker-compose -f docker-compose.travis.yml exec tutelar sbt -mem 2048 clean compile test it:test
+#  - docker-compose -f docker-compose.travis.yml exec tutelar sbt -mem 2048 clean compile test it:test
 
 before_deploy:
   - openssl aes-256-cbc -K $encrypted_5b60a6c9b373_key -iv $encrypted_5b60a6c9b373_iv -in project/travis-deploy-key.enc -out project/travis-deploy-key -d
@@ -15,7 +15,7 @@ before_deploy:
   - docker-compose -f docker-compose.travis.yml exec tutelar mkdir -p ~/.ssh
   - docker-compose -f docker-compose.travis.yml exec tutelar touch ~/.ssh/known_hosts
   - docker-compose -f docker-compose.travis.yml exec tutelar ssh-keyscan -H github.com >> ~/.ssh/known_hosts
-  - docker-compose -f docker-compose.travis.yml exec tutelar bash -c "eval $(ssh-agent -s)"
+  - docker-compose -f docker-compose.travis.yml exec tutelar bash -c "eval \"$(ssh-agent -s)\""
   - docker-compose -f docker-compose.travis.yml exec tutelar ssh-add project/travis-deploy-key
 
 deploy:
@@ -23,4 +23,4 @@ deploy:
   script: docker-compose -f docker-compose.travis.yml exec tutelar sbt "; project docs ; makeSite ; ghpagesPushSite"
   skip_cleanup: true
   on:
-    branch: master
+    branch: docstest
