--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 sudo: required
 
+language: scala
+
 services:
   - docker
 
@@ -8,19 +10,16 @@ script:
   - docker-compose -f docker-compose.travis.yml exec tutelar sbt -mem 2048 clean compile test it:test
 
 before_deploy:
+  - git config --global user.name "$USER"
+  - git config --global user.email "$TRAVIS_BUILD_NUMBER@$TRAVIS_COMMIT"
   - openssl aes-256-cbc -K $encrypted_5b60a6c9b373_key -iv $encrypted_5b60a6c9b373_iv -in project/travis-deploy-key.enc -out project/travis-deploy-key -d
   - chmod 600 project/travis-deploy-key
-  - docker-compose -f docker-compose.travis.yml exec tutelar git config --global user.name "$USER"
-  - docker-compose -f docker-compose.travis.yml exec tutelar git config --global user.email "$TRAVIS_BUILD_NUMBER@$TRAVIS_COMMIT"
-  - docker-compose -f docker-compose.travis.yml exec tutelar mkdir -p ~/.ssh
-  - docker-compose -f docker-compose.travis.yml exec tutelar touch ~/.ssh/known_hosts
-  - docker-compose -f docker-compose.travis.yml exec tutelar ssh-keyscan -H github.com >> ~/.ssh/known_hosts
-  - docker-compose -f docker-compose.travis.yml exec tutelar bash -c "eval $(ssh-agent -s)"
-  - docker-compose -f docker-compose.travis.yml exec tutelar ssh-add project/travis-deploy-key
+  - eval "$(ssh-agent -s)"
+  - ssh-add project/travis-deploy-key
 
 deploy:
   provider: script
-  script: docker-compose -f docker-compose.travis.yml exec tutelar sbt "; project docs ; makeSite ; ghpagesPushSite"
+  script: sbt "; project docs ; makeSite ; ghpagesPushSite"
   skip_cleanup: true
   on:
     branch: master
