--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 
 script:
   - docker-compose -f docker-compose.travis.yml up -d
-  - docker-compose -f docker-compose.travis.yml exec tutelar sbt -mem 2048 clean compile test it:test clean
+  - docker-compose -f docker-compose.travis.yml exec tutelar sbt -mem 2048 clean compile test it:test
 
 before_deploy:
   - git config --global user.name "$USER"
@@ -19,7 +19,7 @@ before_deploy:
 
 deploy:
   provider: script
-  script: sbt "; project docs ; makeSite ; ghpagesPushSite"
+  script: sudo sbt "; project docs ; makeSite ; ghpagesPushSite"
   skip_cleanup: true
   on:
     branch: fix-docs
