--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 
 script:
   - docker-compose -f docker-compose.travis.yml up -d
-  - docker-compose -f docker-compose.travis.yml exec -u $(id -u $USERNAME) tutelar sbt -mem 2048 clean compile test it:test
+  - docker-compose -f docker-compose.travis.yml exec -u $UID tutelar sbt -mem 2048 clean compile test it:test
 
 before_deploy:
   - git config --global user.name "$USER"
