--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,18 +11,20 @@ database {
   postgres {
     driver = "org.postgresql.Driver"
     url = "jdbc:postgresql://localhost:5432/postgres?user=postgres&password=postgres"
-    url = ${?DB_URL}
+    url = ${?POSTGRES_URL}
     numThreads = 5
+    numThreads = ${?POSTGRES_THREADS}
     maximumPoolSize = 20
+    maximumPoolSize = ${?POSTGRES_MAX_POOL_SIZE}
     connectionPool = "HikariCP"
   }
 
   mongo {
     uri = "mongodb://localhost/tutelar"
-    uri = ${?DB_URI}
-    uriFile = ${?DB_URI_FILE}
+    uri = ${?MONGO_URI}
+    uriFile = ${?MONGO_URI_FILE}
     collection = "users"
-    collection = ${?DB_COLLECTION}
+    collection = ${?MONGO_COLLECTION}
   }
 }
 
@@ -199,12 +201,12 @@ userpass {
 
     http {
       serviceUrl = "http://localhost:9010"
-      serviceUrl =  ${?EMAIL_SERVICE_URL}
+      serviceUrl =  ${?EMAIL_HTTP_SERVICE_URL}
       serviceUsername = ""
-      serviceUsername = ${?EMAIL_SERVICE_USERNAME}
+      serviceUsername = ${?EMAIL_HTTP_SERVICE_USERNAME}
       servicePassword = "super_secret_123"
-      servicePassword = ${?EMAIL_SERVICE_PASSWORD}
-      servicePasswordFile = ${?EMAIL_SERVICE_PASSWORD_FILE}
+      servicePassword = ${?EMAIL_HTTP_SERVICE_PASSWORD}
+      servicePasswordFile = ${?EMAIL_HTTP_SERVICE_PASSWORD_FILE}
     }
 
     amqp {
@@ -220,8 +222,13 @@ userpass {
 
 totp {
   algorithm = "SHA1" // MD5, SHA1, SHA256, SHA512
+  algorithm = ${?TOTP_ALGORITHM}
   window = 1
+  window = ${?TOTP_WINDOW}
   period = 30s
+  period = ${?TOTP_PERIOD}
   digits = 6
+  digits = ${?TOTP_DIGITS}
   startFromCurrentTime = false
+  startFromCurrentTime = ${?TOTP_START_FROM_CURRENT_TIME}
 }
