Add escher auth to hook service

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -106,12 +106,41 @@ callback {
   failure = ${?CALLBACK_FAILURE}
 }
 
+escher {
+  credential-scope = "eu/tutelar/request"
+  credential-scope = ${?ESCHER_SCOPE}
+  auth-header-name = "X-Escher-Auth"
+  auth-header-name = ${?ESCHER_AUTH_HEADER}
+  date-header-name = "X-Escher-Date"
+  date-header-name = ${?ESCHER_DATE_HEADER}
+  algo-prefix = "ESR"
+  algo-prefix = ${?ESCHER_ALGO_PREFIX}
+  vendor-key = "Escher"
+  vendor-key = ${?ESCHER_VENDOR_KEY}
+  hostname = "localhost"
+  hostname = ${?ESCHER_HOSTNAME}
+  port = "9000"
+  port = ${?ESCHER_PORT}
+
+  trusted-services = [
+    {
+      name = "hook"
+      key = "hook-service-key"
+      key = ${?ESCHER_SERVICE_HOOK_KEY}
+      secret = "hook-service-secret-key"
+      secret = ${?ESCHER_SERVICE_HOOK_SECRET}
+      credential-scope = "eu/tutelar/request"
+      credential-scope =  ${?ESCHER_SERVICE_HOOK_SCOPE}
+    }
+  ]
+}
+
 hook {
   // empty == hook module off
   baseUrl = ""
   baseUrl = ${?HOOK_BASE_PATH}
 
-  // basic
+  // basic, escher
   authType = "basic"
   authType = ${?HOOK_AUTH_TYPE}
 
