Creates jaeger config.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -261,3 +261,16 @@ totp {
   startFromCurrentTime = false
   startFromCurrentTime = ${?TOTP_START_FROM_CURRENT_TIME}
 }
+
+jaeger {
+  serviceName = "tutelar"
+
+  sampler {
+    type = "const"
+    param = 1
+  }
+
+  reporter {
+    withLogSpans = true
+  }
+}
