--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 // core modules: health, rabbitmq
 // auth modules: basic, email, ldap, github, google, facebook, totp
-modulesEnabled = "health,basic,email,ldap,github,google,facebook,totp"
+modulesEnabled = "health,basic,email,ldap,totp"
 modulesEnabled = ${?MODULES_ENABLED}
 
 database {
