--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,9 @@ services:
 
 script:
   - docker-compose -f docker-compose.travis.yml up -d
-  - docker-compose -f docker-compose.travis.yml exec tutelar sbt -mem 2048 clean compile test it:test "; project docs ; makeSite"
+  - docker-compose -f docker-compose.travis.yml exec tutelar sbt -mem 2048 clean compile test it:test "; project docs ; makeSite" stage
+  - cp ./target/universal/stage ./stage
+  - chmod -R u=rX,g=rX ./stage && chmod u+x,g+x ./stage/bin/main
   - docker build -t teamwanari/tutelar .
 
 before_deploy:
