Refactor docker build

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ services:
 script:
   - docker-compose -f docker-compose.travis.yml up -d
   - docker-compose -f docker-compose.travis.yml exec tutelar sbt -mem 2048 clean compile test it:test stage "; project docs ; makeSite"
-  - cp ./target/universal/stage ./stage
+  - cp -R ./target/universal/stage ./stage
   - chmod -R u=rX,g=rX ./stage && chmod u+x,g+x ./stage/bin/main
   - docker build -t teamwanari/tutelar .
 
