--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,10 @@ services:
 
 script:
   - docker-compose -f docker-compose.travis.yml up -d
-  - docker-compose -f docker-compose.travis.yml exec tutelar sbt -mem 2048 clean compile test it:test
+  - docker-compose -f docker-compose.travis.yml exec tutelar sbt -mem 2048 clean compile test it:test stage "; project docs ; makeSite"
+  - cp -R ./target/universal/stage ./stage
+  - chmod -R u=rX,g=rX ./stage && chmod u+x,g+x ./stage/bin/main
+  - docker build -t teamwanari/tutelar .
 
 before_deploy:
   - sudo chown -R $UID .
@@ -22,11 +25,17 @@ before_deploy:
   - chmod 600 project/travis-deploy-key
   - eval "$(ssh-agent -s)"
   - ssh-add project/travis-deploy-key
+  - echo "$DOCKER_PASSWORD" | docker login -u teamwanari --password-stdin
 
 deploy:
-  provider: script
-  script: sbt "; project docs ; makeSite ; ghpagesPushSite"
-  skip_cleanup: true
-  on:
-    all_branches: true
-    condition: "$TRAVIS_TAG =~ ^v.*$"
+  - provider: script
+    script: docker push teamwanari/tutelar
+    skip_cleanup: true
+    on:
+      branch: master
+  - provider: script
+    script: docker tag tutelar teamwanari/tutelar:$TRAVIS_TAG && docker push teamwanari/tutelar:$TRAVIS_TAG && sbt "; project docs ; ghpagesPushSite"
+    skip_cleanup: true
+    on:
+      all_branches: true
+      condition: "$TRAVIS_TAG =~ ^v.*$"
