Add expiration service config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -274,3 +274,49 @@ jaeger {
     withLogSpans = true
   }
 }
+
+// type: empty == disabled | inactivity | lifetime
+providerLoginExpiration {
+  basic {
+    type = ""
+    type = ${?BASIC_LOGIN_EXPIRATION_TYPE}
+    duration = "1day"
+    duration = ${?BASIC_LOGIN_EXPIRATION_DURATION}
+  }
+  email {
+    type = ""
+    type = ${?EMAIL_LOGIN_EXPIRATION_TYPE}
+    duration = "1day"
+    duration = ${?EMAIL_LOGIN_EXPIRATION_DURATION}
+  }
+  ldap {
+    type = ""
+    type = ${?LDAP_LOGIN_EXPIRATION_TYPE}
+    duration = "1day"
+    duration = ${?LDAP_LOGIN_EXPIRATION_DURATION}
+  }
+  github {
+    type = ""
+    type = ${?GITHUB_LOGIN_EXPIRATION_TYPE}
+    duration = "1day"
+    duration = ${?GITHUB_LOGIN_EXPIRATION_DURATION}
+  }
+  google {
+    type = ""
+    type = ${?GOOGLE_LOGIN_EXPIRATION_TYPE}
+    duration = "1day"
+    duration = ${?GOOGLE_LOGIN_EXPIRATION_DURATION}
+  }
+  facebook {
+    type = ""
+    type = ${?FACEBOOK_LOGIN_EXPIRATION_TYPE}
+    duration = "1day"
+    duration = ${?FACEBOOK_LOGIN_EXPIRATION_DURATION}
+  }
+  totp {
+    type = ""
+    type = ${?TOTP_LOGIN_EXPIRATION_TYPE}
+    duration = "1day"
+    duration = ${?TOTP_LOGIN_EXPIRATION_DURATION}
+  }
+}
