--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -95,3 +95,17 @@ userpass {
     }
   }
 }
+providerLoginExpiration = ""
+providerLoginExpiration {
+  aaaProvider {
+    type = ""
+  }
+  bbbProvider {
+    type = "inactivity"
+    duration = "1day"
+  }
+  cccProvider {
+    type = "lifetime"
+    duration = "1hour"
+  }
+}
