--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -169,6 +169,14 @@ akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   loglevel = "DEBUG"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  http {
+    client {
+      idle-timeout = 120 s
+    }
+    host-connection-pool {
+      idle-timeout = 150 s
+    }
+  }
 }
 
 oauth2 {
