add host.docker.internal hack

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -28,12 +28,16 @@ services:
     command: --copy-service
   nginx:
     image: nginx:stable-alpine
+    command: "/etc/nginx/host_dns_hack.sh"
     volumes:
     - ./scripts/nginx/proxy.conf:/etc/nginx/conf.d/default.conf
     - ./scripts/nginx/cert.key:/etc/nginx/ssl/cert.key
     - ./scripts/nginx/cert.pem:/etc/nginx/ssl/cert.pem
     - ./scripts/nginx/www:/var/www
-    network_mode: "host"
+    - ./scripts/nginx/host_dns_hack.sh:/etc/nginx/host_dns_hack.sh
+    ports:
+      - 9443:9443
+      - 8080:8080
   emailservice:
     image: ksisu/emailservice
     volumes:
