--- a/scripts/nginx/proxy.conf
+++ b/scripts/nginx/proxy.conf
@@ -1,6 +1,5 @@
 server {
   listen                     9443 ssl;
-  server_name                localhost;
 
   ssl                        on;
   ssl_protocols              TLSv1 TLSv1.1 TLSv1.2;
@@ -8,7 +7,7 @@ server {
   ssl_certificate_key        ssl/cert.key;
 
   location / {
-    proxy_pass          http://localhost:9000;
+    proxy_pass          http://host.docker.internal:9000;
     proxy_set_header    Host      $host;
     proxy_set_header    X-Real-IP $remote_addr;
     proxy_set_header    X-HTTPS   'True';
@@ -26,7 +25,7 @@ server {
   server_name jaeger.lvh.me;
 
   location / {
-    proxy_pass http://localhost:16686;
+    proxy_pass http://host.docker.internal:16686;
   }
 }
 
@@ -35,7 +34,7 @@ server {
   server_name mailhog.lvh.me;
 
   location / {
-    proxy_pass http://localhost:8025;
+    proxy_pass http://host.docker.internal:8025;
   }
 }
 
@@ -44,6 +43,6 @@ server {
   server_name rabbitmq.lvh.me;
 
   location / {
-    proxy_pass http://localhost:15672;
+    proxy_pass http://host.docker.internal:15672;
   }
 }
