Small fix in application.conf

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,4 @@
-// core modules: health, rabbitmq
+// core modules: health, ampq
 // auth modules: basic, email, ldap, github, google, facebook, totp
 modulesEnabled = "health,basic,email,ldap,totp"
 modulesEnabled = ${?MODULES_ENABLED}
@@ -129,6 +129,7 @@ escher {
       key = ${?ESCHER_SERVICE_HOOK_KEY}
       secret = "hook-service-secret-key"
       secret = ${?ESCHER_SERVICE_HOOK_SECRET}
+      secret-file = ${?ESCHER_SERVICE_HOOK_SECRET_FILE}
       credential-scope = "eu/tutelar/request"
       credential-scope =  ${?ESCHER_SERVICE_HOOK_SCOPE}
     }
