--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -10,8 +10,10 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+
+    env:
+      COMPOSE_INTERACTIVE_NO_CLI: 1
 
     steps:
     - uses: actions/checkout@v1
