--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,8 +1,9 @@
 pull_request_rules:
   - name: automatically merge scala-steward's PRs
     conditions:
-      - author=scala-steward
+      - author=Ksisu
       - status-success=continuous-integration/travis-ci/pr
+      - status-success=Tests CI / build (pull_request)
     actions:
       merge:
         method: squash
