Add ldap service api list users

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -1,1 +1,10 @@
 modulesEnabled = "health,basic,email,ldap,github,google,facebook,totp"
+ldap {
+  ldapApi {
+    auth = "basic"
+    basic {
+      username = "testuser"
+      password = "testpass"
+    }
+  }
+}
