--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -113,6 +113,7 @@ escher {
   auth-header-name = ${?ESCHER_AUTH_HEADER}
   date-header-name = "X-Escher-Date"
   date-header-name = ${?ESCHER_DATE_HEADER}
+  headers-to-sign = ["host", "X-Escher-Date"]
   algo-prefix = "ESR"
   algo-prefix = ${?ESCHER_ALGO_PREFIX}
   vendor-key = "Escher"
@@ -132,6 +133,16 @@ escher {
       secret-file = ${?ESCHER_SERVICE_HOOK_SECRET_FILE}
       credential-scope = "eu/tutelar/request"
       credential-scope =  ${?ESCHER_SERVICE_HOOK_SCOPE}
+    }
+    {
+      name = "ldap-api"
+      key = "ldap-api-service-key"
+      key = ${?ESCHER_SERVICE_LDAP_API_KEY}
+      secret = "ldap-api-service-secret-key"
+      secret = ${?ESCHER_SERVICE_LDAP_API_SECRET}
+      secret-file = ${?ESCHER_SERVICE_LDAP_API_SECRET_FILE}
+      credential-scope = "eu/tutelar/request"
+      credential-scope =  ${?ESCHER_SERVICE_LDAP_API_SCOPE}
     }
   ]
 }
@@ -223,6 +234,23 @@ ldap {
   userSearchReturnAttributes = ${?LDAP_USER_SEARCH_RETURN_ATTRIBUTES}
   userSearchReturnArrayAttributes = "memberof"
   userSearchReturnArrayAttributes = ${?LDAP_USER_SEARCH_RETURN_ARRAY_ATTRIBUTES}
+
+  ldapApi {
+    // basic, escher
+    auth = "escher"
+    auth = ${?LDAP_API_AUTH}
+    basic {
+      username = ""
+      username = ${?LDAP_API_BASIC_USERNAME}
+      password = ""
+      password = ${?LDAP_API_BASIC_PASSWORD}
+      passwordFile = ${?LDAP_API_BASIC_PASSWORD_FILE}
+    }
+    escher {
+      trustedServices = "ldap-api"
+      trustedServices = ${?LDAP_API_ESCHER_TRUSTED_SERVICES}
+    }
+  }
 }
 
 userpass {
