--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -109,3 +109,37 @@ providerLoginExpiration {
     duration = "1hour"
   }
 }
+
+exampleServiceApiBasic {
+  auth = "basic"
+  basic {
+    username = "u"
+    password = "p"
+  }
+}
+exampleServiceApiEscher {
+  auth = "escher"
+  escher {
+    trustedServices = "service1,service2"
+  }
+}
+
+escher-test {
+  credential-scope = "eu/tutelar/request"
+  auth-header-name = "X-Escher-Auth"
+  date-header-name = "X-Escher-Date"
+  headers-to-sign = ["host", "X-Escher-Date"]
+  algo-prefix = "ESR"
+  vendor-key = "Escher"
+  hostname = "localhost"
+  port = "9000"
+
+  trusted-services = [
+    {
+      name = "test-service"
+      key = "test-key"
+      secret = "test-secret-key"
+      credential-scope = "eu/tutelar/request"
+    }
+  ]
+}
