--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -93,6 +93,20 @@ userpass {
       exchange = "EX"
       buffer-size = 777
     }
+    smtp {
+      host = "HOST"
+      port = 1025
+      ssl = true
+      username = "USER"
+      password = "PASS"
+      template {
+        senderAddress = "SENDER_EMAIL"
+        registerTitle = "REGISTER_TITLE"
+        registerBody = "REGISTER_BODY"
+        resetPasswordTitle = "RESET_PASSWORD_TITLE"
+        resetPasswordBody = "RESET_PASSWORD_BODY"
+      }
+    }
   }
 }
 providerLoginExpiration = ""
