--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -261,8 +261,8 @@ userpass {
   }
 
   email {
-    // http, amqp
-    type = "http"
+    // http, amqp, smtp
+    type = "smtp"
     type = ${?EMAIL_SERVICE_TYPE}
 
     http {
@@ -273,6 +273,31 @@ userpass {
       servicePassword = "super_secret_123"
       servicePassword = ${?EMAIL_HTTP_SERVICE_PASSWORD}
       servicePasswordFile = ${?EMAIL_HTTP_SERVICE_PASSWORD_FILE}
+    }
+
+    smtp {
+      host = "localhost"
+      host = ${?EMAIL_SMTP_HOST}
+      port = 1025
+      port = ${?EMAIL_SMTP_PORT}
+      ssl = false
+      ssl = ${?EMAIL_SMTP_SSL}
+      username = ""
+      username = ${?EMAIL_SMTP_USERNAME}
+      password = ""
+      password = ${?EMAIL_SMTP_PASSWORD}
+      template {
+        senderAddress = "no-reply@tutelar"
+        senderAddress = ${?EMAIL_SMTP_TEMPLATE_ADDRESS}
+        registerTitle = "[Tutelar] Register"
+        registerTitle = ${?EMAIL_SMTP_TEMPLATE_REGISTER_TITLE}
+        registerBody = "Hello! <br/> <a href='https://lvh.me:9443/index.html?registerToken=<<TOKEN>>'>Click here to register!</a>"
+        registerBody = ${?EMAIL_SMTP_TEMPLATE_REGISTER_BODY}
+        resetPasswordTitle = "[Tutelar] Reset password"
+        resetPasswordTitle = ${?EMAIL_SMTP_TEMPLATE_RESET_PASSWORD_TITLE}
+        resetPasswordBody = "Hello! <br/> <a href='https://lvh.me:9443/index.html?resetPasswordToken=<<TOKEN>>'>Click here to reset password!</a>"
+        resetPasswordBody = ${?EMAIL_SMTP_TEMPLATE_RESET_PASSWORD_BODY}
+      }
     }
 
     amqp {
