Remove http email service

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -261,19 +261,9 @@ userpass {
   }
 
   email {
-    // http, amqp, smtp
+    // amqp, smtp
     type = "smtp"
     type = ${?EMAIL_SERVICE_TYPE}
-
-    http {
-      serviceUrl = "http://localhost:9010"
-      serviceUrl =  ${?EMAIL_HTTP_SERVICE_URL}
-      serviceUsername = ""
-      serviceUsername = ${?EMAIL_HTTP_SERVICE_USERNAME}
-      servicePassword = "super_secret_123"
-      servicePassword = ${?EMAIL_HTTP_SERVICE_PASSWORD}
-      servicePasswordFile = ${?EMAIL_HTTP_SERVICE_PASSWORD_FILE}
-    }
 
     smtp {
       host = "localhost"
