--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -83,15 +83,24 @@ userpass {
   }
   email {
     type = "TYPE"
-    http {
-      serviceUrl = "URL"
-      serviceUsername = "USERNAME"
-      servicePassword = "SECRET"
-    }
     amqp {
       routing-key = "RK"
       exchange = "EX"
       buffer-size = 777
+    }
+    smtp {
+      host = "HOST"
+      port = 1025
+      ssl = true
+      username = "USER"
+      password = "PASS"
+      template {
+        senderAddress = "SENDER_EMAIL"
+        registerTitle = "REGISTER_TITLE"
+        registerBody = "REGISTER_BODY"
+        resetPasswordTitle = "RESET_PASSWORD_TITLE"
+        resetPasswordBody = "RESET_PASSWORD_BODY"
+      }
     }
   }
 }
