Add separate hook enable options to the config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -152,6 +152,10 @@ hook {
   baseUrl = ""
   baseUrl = ${?HOOK_BASE_PATH}
 
+  // available hooks: register, login, modify, link, unlink, delete, refresh
+  enabled = "register,login,modify,link,unlink,delete,refresh"
+  enabled = ${?HOOK_ENABLED}
+
   // basic, escher
   authType = "basic"
   authType = ${?HOOK_AUTH_TYPE}
