Add JWT auth support to HookService

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -97,6 +97,23 @@ jwt {
     publicKey = ${?TOTP_JWT_PUBLIC_KEY}
     publicKeyFile = ${?TOTP_JWT_PUBLIC_KEY_FILE}
   }
+  hook {
+    expirationTime = "5m"
+    expirationTime = ${?HOOK_JWT_EXPIRATION_TIME}
+    // Symmetric: HMD5 | HS224 | HS256 | HS384 | HS512
+    // Asymmetric: RS256 | RS384 | RS512 | ES256 | ES384 | ES512
+    algorithm = "HS256"
+    algorithm = ${?HOOK_JWT_ALGORITHM}
+    secret = "secret_hook"
+    secret = ${?HOOK_JWT_SECRET}
+    secretFile = ${?HOOK_JWT_SECRET_FILE}
+    privateKey = ""
+    privateKey = ${?HOOK_JWT_PRIVATE_KEY}
+    privateKeyFile = ${?HOOK_JWT_PRIVATE_KEY_FILE}
+    publicKey = ""
+    publicKey = ${?HOOK_JWT_PUBLIC_KEY}
+    publicKeyFile = ${?HOOK_JWT_PUBLIC_KEY_FILE}
+  }
 }
 
 callback {
