Small config refactor

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -165,15 +165,14 @@ escher {
 }
 
 hook {
-  // empty == hook module off
+  // available hooks: register, login, modify, link, unlink, delete, refresh
+  enabled = ""
+  enabled = ${?HOOK_ENABLED}
+
   baseUrl = ""
   baseUrl = ${?HOOK_BASE_PATH}
 
-  // available hooks: register, login, modify, link, unlink, delete, refresh
-  enabled = "register,login,modify,link,unlink,delete,refresh"
-  enabled = ${?HOOK_ENABLED}
-
-  // basic, escher
+  // basic, escher, jwt
   authType = "basic"
   authType = ${?HOOK_AUTH_TYPE}
 
