--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -31,6 +31,8 @@ callback {
 }
 
 hook {
+  enabled = "register,login,modify,link,unlink,delete,refresh"
+
   baseUrl = "https://backend/hook"
 
   authType = "basic"
