Add JWT support to ServiceAuthDirectives

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -114,6 +114,23 @@ jwt {
     publicKey = ${?HOOK_JWT_PUBLIC_KEY}
     publicKeyFile = ${?HOOK_JWT_PUBLIC_KEY_FILE}
   }
+  ldapProvider {
+    expirationTime = "5m"
+    expirationTime = ${?LDAP_API_JWT_EXPIRATION_TIME}
+    // Symmetric: HMD5 | HS224 | HS256 | HS384 | HS512
+    // Asymmetric: RS256 | RS384 | RS512 | ES256 | ES384 | ES512
+    algorithm = "HS256"
+    algorithm = ${?LDAP_API_JWT_ALGORITHM}
+    secret = "secret_ldap"
+    secret = ${?LDAP_API_JWT_SECRET}
+    secretFile = ${?LDAP_API_JWT_SECRET_FILE}
+    privateKey = ""
+    privateKey = ${?LDAP_API_JWT_PRIVATE_KEY}
+    privateKeyFile = ${?LDAP_API_JWT_PRIVATE_KEY_FILE}
+    publicKey = ""
+    publicKey = ${?LDAP_API_JWT_PUBLIC_KEY}
+    publicKeyFile = ${?LDAP_API_JWT_PUBLIC_KEY_FILE}
+  }
 }
 
 callback {
@@ -256,7 +273,7 @@ ldap {
   userSearchReturnArrayAttributes = ${?LDAP_USER_SEARCH_RETURN_ARRAY_ATTRIBUTES}
 
   ldapApi {
-    // basic, escher
+    // basic, escher, jwt
     auth = "escher"
     auth = ${?LDAP_API_AUTH}
     basic {
@@ -269,6 +286,11 @@ ldap {
     escher {
       trustedServices = "ldap-api"
       trustedServices = ${?LDAP_API_ESCHER_TRUSTED_SERVICES}
+    }
+    jwt {
+      // See config: jwt.<<NAME>>
+      configName = "ldapProvider"
+      configName = ${?LDAP_API_JWT_CONFIG_NAME}
     }
   }
 }
