--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -134,6 +134,12 @@ exampleServiceApiEscher {
     trustedServices = "service1,service2"
   }
 }
+exampleServiceApiJwt {
+  auth = "jwt"
+  jwt {
+    configName = "example"
+  }
+}
 
 escher-test {
   credential-scope = "eu/tutelar/request"
