Add access blocked option to ServiceAuthDirectives

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -140,6 +140,9 @@ exampleServiceApiJwt {
     configName = "example"
   }
 }
+exampleServiceApiBlocked {
+  auth = "blocked"
+}
 
 escher-test {
   credential-scope = "eu/tutelar/request"
