Refactor AMQP config

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -86,8 +86,7 @@ userpass {
   email {
     type = "TYPE"
     amqp {
-      routing-key = "RK"
-      exchange = "EX"
+      queue-name = "NAME"
       buffer-size = 777
     }
     smtp {
