Add postgres connection url config from file

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,6 +12,7 @@ database {
     driver = "org.postgresql.Driver"
     url = "jdbc:postgresql://localhost:5432/postgres?user=postgres&password=postgres"
     url = ${?POSTGRES_URL}
+    urlFile = ${?POSTGRES_URL_FILE}
     numThreads = 5
     numThreads = ${?POSTGRES_THREADS}
     maximumPoolSize = 20
