Small config change

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -274,8 +274,8 @@ ldap {
   userSearchReturnArrayAttributes = ${?LDAP_USER_SEARCH_RETURN_ARRAY_ATTRIBUTES}
 
   ldapApi {
-    // basic, escher, jwt
-    auth = "escher"
+    // basic, escher, jwt, blocked
+    auth = "blocked"
     auth = ${?LDAP_API_AUTH}
     basic {
       username = ""
@@ -334,8 +334,8 @@ userpass {
     }
 
     amqp {
-      routing-key = "tutelar_email"
-      routing-key = ${?EMAIL_SERVICE_AMQP_QUEUE_NAME}
+      queue-name = "tutelar_email"
+      queue-name = ${?EMAIL_SERVICE_AMQP_QUEUE_NAME}
       buffer-size = 100
       buffer-size = ${?EMAIL_SERVICE_AMQP_BUFFER_SIZE}
     }
