Provider login expiration config use lowercase names

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -107,14 +107,14 @@ userpass {
 }
 providerLoginExpiration = ""
 providerLoginExpiration {
-  aaaProvider {
+  aaaprovider {
     type = ""
   }
-  bbbProvider {
+  bbbprovider {
     type = "inactivity"
     duration = "1day"
   }
-  cccProvider {
+  cccprovider {
     type = "lifetime"
     duration = "1hour"
   }
