Add custom header auth to HookService

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -190,7 +190,7 @@ hook {
   baseUrl = ""
   baseUrl = ${?HOOK_BASE_PATH}
 
-  // basic, escher, jwt
+  // basic, custom_header, escher, jwt
   authType = "basic"
   authType = ${?HOOK_AUTH_TYPE}
 
@@ -200,6 +200,14 @@ hook {
     password = ""
     password = ${?HOOK_BASIC_PASSWORD}
     passwordFile = ${?HOOK_BASIC_PASSWORD_FILE}
+  }
+
+  customHeader {
+    headername = ""
+    headername = ${?HOOK_CUSTOM_HEADER_NAME}
+    secret = ""
+    secret = ${?HOOK_CUSTOM_HEADER_SECRET}
+    secretFile = ${?HOOK_CUSTOM_HEADER_SECRET_FILE}
   }
 }
 
