--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -41,6 +41,11 @@ hook {
     username = "user"
     password = "pass"
   }
+
+  customHeader {
+    headername = "Custom-Header-Auth"
+    secret = "top secret"
+  }
 }
 
 tracer {
