Implement MS OAuth2 login support

--- a/src/it/resources/application.conf
+++ b/src/it/resources/application.conf
@@ -1,4 +1,4 @@
-modulesEnabled = "health,basic,email,ldap,github,google,facebook,totp"
+modulesEnabled = "health,basic,email,ldap,github,google,facebook,microsoft,totp"
 ldap {
   ldapApi {
     auth = "basic"
