--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 // core modules: health, ampq
-// auth modules: basic, email, ldap, github, google, facebook, totp
+// auth modules: basic, email, ldap, github, google, facebook, microsoft, totp
 modulesEnabled = "health,basic,email,ldap,totp"
 modulesEnabled = ${?MODULES_ENABLED}
 
@@ -248,6 +248,12 @@ oauth2 {
     scopes = "openid,email,profile"
   }
 
+  microsoft {
+    clientId = ${?MICROSOFT_CLIENT_ID}
+    clientSecret = ${?MICROSOFT_CLIENT_SECRET}
+    clientSecretFile = ${?MICROSOFT_CLIENT_SECRET_FILE}
+    scopes = "user.read"
+  }
 }
 
 ldap {
@@ -399,6 +405,12 @@ providerLoginExpiration {
     type = ${?FACEBOOK_LOGIN_EXPIRATION_TYPE}
     duration = "1day"
     duration = ${?FACEBOOK_LOGIN_EXPIRATION_DURATION}
+  }
+  microsoft {
+    type = ""
+    type = ${?MICROSOFT_LOGIN_EXPIRATION_TYPE}
+    duration = "1day"
+    duration = ${?MICROSOFT_LOGIN_EXPIRATION_DURATION}
   }
   totp {
     type = ""
