--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -3,7 +3,7 @@ conf {
   file = "runtime.conf"
 }
 
-// basic, email, ldap, github, google, facebook, totp
+// basic, email, ldap, github, google, facebook, microsoft, totp
 modulesEnabled = "testModule1, testModule2,,testModule3"
 
 database {
@@ -71,6 +71,12 @@ oauth2 {
     clientId = "clientId"
     clientSecret = "clientSecret"
     scopes = "public_profile"
+  }
+
+  microsoft {
+    clientId = "clientId"
+    clientSecret = "clientSecret"
+    scopes = "user.read"
   }
 }
 
